# LDP_final-project

./: .gitignore  CMakeLists.txt  Device.cpp  Device.h  Home.cpp  Home.h  README.md  READMExProf.md  main.cpp
_vecchi files andrea/include/: Device.h  Home.h
_vecchi files andrea/src/: Device.cpp  Home.cpp
_vecchi files giovanni/: 00_Readme.txt  Main.cpp  TestMapHour.cpp
include/: Clock.h  Device.h  DeviceCP.h  DeviceM.h  Home.h  Parser.h
log/: log.txt  log1.txt  log2.txt  main.txt
src/: Clock.cpp  Device.cpp  DeviceCP.cpp  DeviceM.cpp  Home.cpp  Parser.cpp  main.cpp
test/: test_clock.cpp  test_compiler.cpp  test_device.cpp  test_home.cpp  test_slicing.cpp  test_static_ID.cpp
